[gd_scene load_steps=3 format=3 uid="uid://crmlhg3xvjvg2"]

[ext_resource type="Script" path="res://scripts/ui/creature_list_item.gd" id="1_h5p1w"]
[ext_resource type="Theme" uid="uid://bfvxqkp6lm5r3" path="res://resources/themes/default_theme.tres" id="2_mxp7l"]

[node name="CreatureListItem" type="PanelContainer"]
custom_minimum_size = Vector2(0, 30)
theme = ExtResource("2_mxp7l")
script = ExtResource("1_h5p1w")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Creature Name"
vertical_alignment = 1

[node name="SpeciesLabel" type="Label" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
text = "Species"
vertical_alignment = 1

[node name="AgeLabel" type="Label" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "0 weeks"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "HP:100 ST:100"
horizontal_alignment = 2
vertical_alignment = 1